--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+   overflow: hidden;  
+
+}
+
+
+
 /* Custom Classes */
 .rounded-black-border {
   border: 2px solid black; /* Set the border width and color */
@@ -107,7 +116,7 @@ body {
   border-radius: 0.5rem; /* Rounded corners */
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Shadow effect */
   padding: 1.5rem; /* Inner padding */
-  color: white; /* Text color */
+  color: rgb(255, 255, 255); /* Text color */
   max-width: 300px; /* Set maximum width */
   width: 100%; /* Full width */
   margin: auto; /* Center card */
